[package]
name = "jex_compiler_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "0.2", features = ["time", "process", "fs"] }
log = "0.4.0"
env_logger = "0.8.4"
random-string = "1.0"
